<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/flight_header"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_marginStart="60dp"
                android:src="@drawable/ic_yamsafer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/flightHeader"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="4dp"
                android:background="@color/signInIcon"
                android:padding="2dp"
                android:text="@string/new_badge"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flight_header">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/flights_card"
                app:cardCornerRadius="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="30dp"
                            android:buttonTint="@color/radiobuttons"
                            android:checked="true"
                            android:text="Round trip"
                            android:textColor="@color/white" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/radiobuttons"

                            android:text="One way"
                            android:textColor="@color/white" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/flight_flying_from"
                            android:textColor="@color/white"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/white"
                            android:drawableStart="@drawable/ic_location"
                            android:drawableTint="@color/flights_blue"
                            android:hint="Flying From"
                            android:textColor="@color/flights_blue"
                            android:textColorHint="@color/flights_blue"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/flight_flying_to"
                            android:textColor="@color/white"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/white"
                            android:drawableStart="@drawable/ic_location"
                            android:drawableTint="@color/flights_blue"
                            android:hint="Flying To"
                            android:textColor="@color/flights_blue"
                            android:textColorHint="@color/flights_blue"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/flight_Departure_date"
                            android:textColor="@color/white"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:layout_width="180dp"
                                android:layout_height="40dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="10dp"
                                android:background="@color/white"
                                android:drawableStart="@drawable/ic_calendar"
                                android:drawableTint="@color/flights_blue"
                                android:hint="Depart"
                                android:textColor="@color/flights_blue"
                                android:textColorHint="@color/flights_blue"/>
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="10dp"
                                android:background="@color/white"
                                android:drawableStart="@drawable/ic_calendar"
                                android:drawableTint="@color/flights_blue"
                                android:hint="Return"
                                android:textColor="@color/flights_blue"
                                android:textColorHint="@color/flights_blue"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/flight_traverlers_cabin"
                            android:textColor="@color/white"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/white"
                            android:drawableStart="@drawable/ic_signin"
                            android:drawableTint="@color/flights_blue"
                            android:hint="1 Adult, Economy"
                            android:textColor="@color/flights_blue"
                            android:textColorHint="@color/flights_blue"/>

                    </LinearLayout>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:buttonTint="@color/white"
                        android:text="@string/show_me_non_stop"
                        android:textColor="@color/white" />


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/radiobuttons"
                        app:cornerRadius="15dp"
                        android:textColor="@color/white"
                        android:text="Search"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="30dp"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>