<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bottomNavbg">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:background="@color/searchBar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:id="@+id/search_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="60dp"
                        android:text="@string/search_bar"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/searchEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@color/white"
                        android:drawableEnd="@drawable/ic_search"
                        android:drawablePadding="30dp"
                        android:drawableTint="@color/white"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/search_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/recent_searches_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/recent_search"
                    android:textColor="@color/recent_search"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/recent_searches"
                    app:layout_constraintTop_toBottomOf="@+id/search_bar" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recent_searches"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recent_searches_text">


                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/hot_deals_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="50dp"
                    android:drawableStart="@drawable/ic_flame"
                    android:drawableTint="@color/signInIcon"
                    android:text="@string/hote_deals"
                    android:textColor="@color/recent_search"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recent_searches" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hot_deals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hot_deals_text">


                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/popular_on_yamsafer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/popular_on_yamsafer"
                    android:textColor="@color/recent_search"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/popular_on_yamsafer"
                    app:layout_constraintTop_toBottomOf="@+id/hot_deals" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popular_on_yamsafer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popular_on_yamsafer_text">


                </androidx.recyclerview.widget.RecyclerView>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


        <ImageView
            android:id="@+id/spinner_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/spinner_bg" />

        <ProgressBar
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="2"
            android:scaleY="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:indeterminateTint="@color/searchBar"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>